Jewels of mongolia with rural naadam festival ni zarim neg udriin hutulbur ni uurchlugduh ym baigaan tuuniig email eer yawuulaw

--- a/resources/views/Tour/jewels-of-mongolia-with-rural-naadam-festival.html.twig
+++ b/resources/views/Tour/jewels-of-mongolia-with-rural-naadam-festival.html.twig
@@ -115,7 +115,7 @@
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 10 Day 3 To Lake Khovsgul in the North.</div>
+                                <div class="box_title">July 10 - Day 3 To Lake Khovsgul in the North.</div>
                                 <div class="box_content">
                                     <p><em><strong>1.2 hours flight to Muron and 4 hrs drive to the Lake Khovsgul</strong></em>
                                         Following breakfast, we are transferred to the airport for flight to Muron in the north.
@@ -139,148 +139,97 @@
                             <div class="sb sb_brown">
                                 <div class="box_title">July 11 - Day 4 Rural Naadam Festival in Khuvsgul lake</div>
                                 <div class="box_content">
-                                    <p>During whole lovely day you enjoy watch Naadam festival or three manly sports such as
-
-                                        wrestling, archery and horse racing. Visit opening ceremony of Naadam festival at the
-
-                                        national stadium. And you will see archery, wrestling and horse racing during Naadam
-
-                                        festival. Naadam festival is of the victory of the People’s Revolution. Mongolia
-
-                                        celebrates its independence and its rich cultural heritage with a festival of sports and
-
-                                        revelry in Ulaanbaatar. The distinctly Mongolian feel and flair of the Naadam Festival
-
-                                        make it a wonderful spectacle, a joyous time, and an intriguing cultural event. Colorful
-
-                                        ceremonies and parading soldiers kick off the celebrations. The ancient game of
-
-                                        wrestling follows, with men competing in many rounds of competition. Both men and
-
-                                        women compete in the archery games, using the traditional Mongolian compound bow
-
-                                        that terrorized Europe when Genghis Khan and his Golden Horde moved their empire
-
-                                        west. The quintessentially Mongolian art of horse racing follows, where up to 800 horses
-
-                                        compete, jockeyed by children so that the skill of the horse, and not the rider, is tested.</p>
+                                    <p>During whole lovely day you enjoy watch Naadam festival or three manly sports
+                                        such aswrestling, archery and horse racing. Visit opening ceremony of Naadam
+                                        festival at the national stadium. And you will see archery, wrestling and horse
+                                        racing during Naadam festival. Naadam festival is of the victory of the People’s
+                                        Revolution. Mongolia celebrates its independence and its rich cultural heritage
+                                        with a festival of sports and revelry in Ulaanbaatar. The distinctly Mongolian
+                                        feel and flair of the Naadam Festival make it a wonderful spectacle, a joyous
+                                        time, and an intriguing cultural event. Colorful ceremonies and parading
+                                        soldiers kick off the celebrations.</p>
                                     <p><strong><em>Overnight in Ger Camp<br/> Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 12 Day 5 Discover Khuvsgul National park</div>
+                                <div class="box_title">July 12 - Day 5 Discover Khuvsgul National park</div>
                                 <div class="box_content">
-                                    <p>During whole lovely day, you will have an opportunity to ride reindeer and observe
-
-                                        them. We spend the next two days in walking, hiking, horseback riding in the environs
-
-                                        of the lake and the nearby mountains and visiting the local nomadic families. Optional
-
-                                        boating trip is available on request.
-
-                                        <br>Khuvsgul Lake is reckoned among the purest fresh water lakes in the world. Its
-
-                                        surroundings right out of a fairytale. Khuvsgul Lake is the second deepest lake in
-
-                                        Central Asia and contains 60% as much water as Lake Baikal. Depth of Khuvsgul Lake
-
-                                        is 262 meters and 136 kilometers long.
-
-                                        <br>Walking and hiking in the lake shores, Horse riding trek near the lake, visiting yak
-
-                                        breeding family and experience their unique lifestyle</p>
+                                    <p>During whole lovely day, you will have an opportunity to ride reindeer and
+                                        observethem. We spend the next two days in walking, hiking, horseback riding in
+                                        the environs ofthe lake and the nearby mountains and visiting the local nomadic
+                                        families. Optionalboating trip is available on request.</p>
+                                    <p><strong>Walking and hiking in the lake shores, Horse riding trek near the lake,
+                                            visiting yakbreeding family and experience their unique lifestyle</strong>
+                                    </p>
                                     <p><strong><em>Overnight in Ger Camp<br/> Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 13 Day 6 Return to Ulaanbaatar</div>
+                                <div class="box_title">July 13 - Day 6 Return to Ulaanbaatar</div>
                                 <div class="box_content">
                                     <p>After breakfast, we return to Muron for our afternoon flight to Ulaanbaatar. Upon
-
-                                        arrival, transfer to the hotel in the city and rest of the day is open for you to pursue your
-
-                                        own interest.</p>
+                                        arrival, transfer to the hotel in the city and rest of the day is open for you
+                                        to pursue your own interest.</p>
                                     <p><strong><em>Overnight in 4* hotel<br/> Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 14 Day 7 Fly to the Gobi Desert (1.2 hours) and then drive to Yol Valley and Gurvansaikhan National Park</div>
+                                <div class="box_title">July 14 - Day 7 Fly to the Gobi Desert (1.2 hours) and then drive to Yol Valley and Gurvansaikhan National Park</div>
                                 <div class="box_content">
-                                    <p>This morning we fly over vast steppe to the Gobi, Mongolia’s southernmost province of
-
-                                        semi-arid desert. Meet your local guide and driver and then transfer by 4WD vehicle to
-
-                                        the Yol Valley in Gurvansaikhan National Park, situated in the lap of Altai Mountains.
-
-                                        On the way to our lodge, we stop to visit the local Natural History Museum for an
-
-                                        insight to the flora and fauna of the area.
-
-                                        <br>The next three days will be well spent exploring the vast Gobi-the habitat of the Bactrian
-
-                                        Camels, Argali mountain sheep, Golden Eagles, Jerboas that resembles the Kangaroo
-
-                                        rats, Saker Falcons etc. We may also take a scenic hike through the valley to discover
-
-                                        the habitat of indigenous vulture-like lammergeyers, Altai snow cocks, ibex, yaks, and
-
-                                        Argali mountain sheep.</p>
+                                    <p>This morning we fly over vast steppe to the Gobi, Mongolia’s southernmost
+                                        province of semi-arid desert. Meet your local guide and driver and then transfer
+                                        by 4WD vehicle to the Yol Valley in Gurvansaikhan National Park, situated in the
+                                        lap of Altai Mountains. On the way to our lodge, we stop to visit the local
+                                        Natural History Museum for an insight to the flora and fauna of the area.</p>
                                     <p><strong><em>Overnight in ger camp<br/> Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 15 Day 8 Yol Valley, Gurvansaikhan National Park to Hongor Sand dune</div>
+                                <div class="box_title">July 15 - Day 8 Drive to Khongor Sand Dune</div>
                                 <div class="box_content">
-                                    <p>After breakfast, take in the stunning scenery of the Gobi-Altai Mountain range as you
-
-                                        transfer to the towering sand dunes of Khongoryn Els, home to the ‘Singing Sands’.
-
-                                        These spectacular dunes got their name from the noise made by the shifting sand in the
-
-                                        wind. Feel the breeze in your hair as you ride a camel across the dunes before returning
-
-                                        to the ger camp. Isolated from the rest of the country, the Singing Sands are the best kept
-
-                                        secret for thousand years in the history of Mongolia.
-
-                                        <br> On the way to go sand dune we will stop the site of the Khavtsgait Petroglyphs. The
-
-                                        Khavtsgait Petroglyphs from the Bronze Age (4000-3000 BC) are beautifully carved on
-
-                                        many rocks on the top of a sacred mountain. It is easy to find the rock paintings there
-
-                                        because they are spread on rocks all around. The area is very rocky and can be slippery
-
-                                        to climb, but by carefully following a path up the mountain, you can reach the top to see
-
-                                        these beautiful rock paintings.</p>
+                                    <p>Take in the stunning scenery of the Gobi-Altai mountain range as you transfer to
+                                        the towering sand dunes of Khongoryn Els, home to the “Singing Sands.” These
+                                        spectacular dunes get their name from the noise made by the shifting sands in
+                                        the wind. Because of its isolation from the rest of the country, the Singing
+                                        Sands were the best-kept secret for the last thousand years of Mongolian
+                                        history. You will visit a camel breeding family nearby and feel the breeze in
+                                        your hair as you ride one of their camels across the dunes before returning to
+                                        the ger camp. </p>
                                     <p><strong><em>Overnight in Ger camp<br/> Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 16 - Day 9 Khongor sand dunes</div>
+                                <div class="box_title">July 16 - Day 9 Day trip to Khavtsgait Petroglyphs and Nomads day</div>
                                 <div class="box_content">
-                                    <p>Today we will have a full day exploring the sand dunes and rest after the long drive. The
-
-                                        dunes seem to stretch on forever like a soft ribbon of sand draped over the desert. The
-
-                                        shifting sand blown by the wind or someone makes sound so it is called Singing Sand
-
-                                        Dunes. There is a beautiful green oasis known as Seruun bulag near the Khongor River.
-
-                                        Return to the camp for lunch and enjoy feeling silence and a peaceful in the beautiful
-
-                                        surroundings Gobi Deserts.</p>
+                                    <p>In the morning we drive to the site of the Khavtsgait Petroglyphs. The
+                                        KhavtsgaitPetroglyphs from the Bronze Age (4000-3000 BC) are beautifully carved
+                                        on many rockson the top of a sacred mountain. It is easy to find the rock
+                                        paintings there because theyare spread on rocks all around. The area is very
+                                        rocky and can be slippery to climb, butby carefully following a path up the
+                                        mountain, you can reach the top to see thesebeautiful rock paintings.
+                                        <br> The petroglyphs were carved and painted with motifs consisting of animals,hunting
+                                        scenes and weapons. They depict various animals related to everyday life of
+                                        ancient people including deer, bears, wolves and hunters, and wolves with
+                                        livestock.Other paintings depict more domestic scenes of yaks pulling carts, the
+                                        wheels and horsesflattened sideways like hieroglyphs, and herders on horseback.
+                                        The engravings vary insize, ranging from two-centimeters to the real life size
+                                        of horses.
+                                        <br> After the rest, we will visit a herder family nearby. We will spend
+                                        some time theregetting to know the family members and their casual yet unique
+                                        daily lifestyle. It is agood chance to see how the family members cooperate
+                                        together to do their daily evenhourly chores such as milking mares, fencing and
+                                        milking the goats. If you wish, you arewelcome to try some mare's fermented milk
+                                        and other dairy products.</p>
                                     <p><strong><em>Overnight in Ger camp<br/> Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
@@ -289,32 +238,25 @@
                             <div class="sb sb_brown">
                                 <div class="box_title">July 17 Day 10 Drive to the Flaming Cliffs</div>
                                 <div class="box_content">
-                                    <p>Following breakfast, we drive to Bayanzag.  After lunch and some rest, we drive to
-
-                                        Bayan Zag, popularly called as “The Flaming Cliffs” for its glowing orange rock. It was
-
-                                        here, in 1922, that Dr. This area got international name as Roy Chapman Andrews and
-
-                                        his exploration team from the American Museum of Natural History discovered the first
-
-                                        nest of dinosaur eggs here. The area is haven for the natural history scientists as the area
-
-                                        is rich in dinosaur fossils.</p>
+                                    <p>Following breakfast, we drive to Bayanzag. After lunch and some rest, we drive to
+                                        Bayan Zag, popularly called as “The Flaming Cliffs” for its glowing orange rock.
+                                        It was here, in 1922, that Dr. This area got international name as Roy Chapman
+                                        Andrews and his exploration team from the American Museum of Natural History
+                                        discovered the first nest of dinosaur eggs here. The area is haven for the
+                                        natural history scientists as the area is rich in dinosaur fossils.</p>
                                     <p><strong><em>Overnight in Ger camp<br/> Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
 
                             <div class="sb sb_brown">
-                                <div class="box_title">July 18 Day 11 Back to Ulaanbaatar.</div>
+                                <div class="box_title">July 18 Day 11 Back to Ulaanbaatar</div>
                                 <div class="box_content">
-                                    <p>Following breakfast, transfer back to the airport and fly to Ulaanbaatar. There is more to
-
-                                        see if you are interested. Visit the Bogd Khan Winter Palace Museum-residence of Bodg
-
-                                        Jabzan Damba Hutagt VIII-Mongolia's last theocrat. Or take leisurely stroll in the town
-
-                                        center. In the evening, enjoy dinner and local folklore dance shows.</p>
+                                    <p>Following breakfast, transfer back to the airport and fly to Ulaanbaatar. There
+                                        is more to see if you are interested. Visit the Bogd Khan Winter Palace
+                                        Museum-residence of Bodg Jabzan Damba Hutagt VIII-Mongolia's last theocrat. Or
+                                        take leisurely stroll in the town center. In the evening, enjoy dinner and local
+                                        folklore dance shows.</p>
                                     <p><strong><em>Overnight in 4* hotel<br/> Meals: Breakfast, lunch and dinner</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
