--- a/resources/views/Page/request_a_callback.html.twig
+++ b/resources/views/Page/request_a_callback.html.twig
@@ -37,9 +37,9 @@
 
                         <div class="form_col_1" style="margin-right: 30px;">
                             <div class="row alignleft field_text">
-                                {{ form_label(form.first_name) }}
-                                {{ form_widget(form.first_name, { 'attr': {'class': 'inputField required'} }) }}
-                                {{ form_errors(form.first_name) }}
+                                {{ form_label(form.name) }}
+                                {{ form_widget(form.name, { 'attr': {'class': 'inputField required'} }) }}
+                                {{ form_errors(form.name) }}
                             </div>
                             <div class="row alignleft field_text">
                                 {{ form_label(form.email) }}
