Shine feedback yawuulsan ene testimonials iin textnii ungiig ni soliyo zugeer tsagaan dewsger deer har bwal yaj bna

--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -1,3 +1,21 @@
+<style type="text/css">
+    .frame_quote {background: #ffffff;}
+    .frame_quote blockquote {color: black;}
+</style>
+<div class="frame_quote"><blockquote>
+    <p>
+        <em>
+            We had a great trip; very worthwhile. Our guide was superb, accommodations quite good and the tour very worthwhile.
+            The first Ger camp (Gobi Nomad Lodge) was excellent: great food and accommodations. The staff was really good and the Chef cooked superb food. We particularly liked his cooking demonstration.
+            Our Guide, Boloro, was fantastic. She was caring, conscientious, always on time and knowledgeable. We enjoyed spending time with her and getting insight into Mongolian culture. She's a real asset to your company.
+            Your drivers were great and knowledgeable. I can't imagine running a trip like yours without competent drivers. They did a great job.
+            We depart Mongolia tomorrow with very warm feelings about your country and culture. Your operation is first rate and professional.
+            Feel free to use our comments as a testimonial.
+        </em></p>
+    <p>
+        <span style="color:#000000"><strong>Carol and Bud Spector</strong></span></p>
+</blockquote>
+</div>
 
 <div class="frame_quote"><blockquote>
     <p>
@@ -8,7 +26,7 @@
             Best regards and wishes for your success.
         </em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Steve Saks</strong></span></p>
+        <span style="color:#000000"><strong>Steve Saks</strong></span></p>
 </blockquote>
 </div>
 
@@ -30,7 +48,7 @@
             great. I had a fabulous time.  Thank you for allowing me to participate!
             </em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Joanne Kelley, from USA</strong></span></p>
+        <span style="color:#000000"><strong>Joanne Kelley, from USA</strong></span></p>
     <p><img src="/images/Luisa.jpg" alt="Luisa"></p>
 </blockquote>
 </div>
@@ -49,7 +67,7 @@
             their way of life.  I highly recommend experiencing Mongolia through
             "Travel All Mongolia".</em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Esther Thavikulwat from USA</strong></span></p>
+        <span style="color:#000000"><strong>Esther Thavikulwat from USA</strong></span></p>
 </blockquote>
 </div>
 
@@ -57,14 +75,14 @@
     <p>
         <em>I’ve been meaning to write to you and thank you for the wonderful trip to your magnificent country.  Every time we turned a corner there was something new and different to experience.  Serjee was a wonderful guide, we enjoyed very much being with her.  She obviously loves Mongolia and was willing to share so much of herself (and her family) with us.  Visiting with her parents in their home was certainly a highlight.  The drivers were the best.  We all felt very safe with them thru the mountains, rivers, whatever.  They participated in activities with us.  And even though they didn’t speak English we all communicated.  Everything else was great.  This was one of the best trips I have ever taken.  Thank you for offering it to us so we could see your wonderful country first hand.</em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Sandra Bremer, USA</strong></span></p>
+        <span style="color:#000000"><strong>Sandra Bremer, USA</strong></span></p>
 </blockquote>
 </div>
 <div class="frame_quote"><blockquote>
     <p>
         <em>It is truly an experience, to be with the family. Very impressed with what the desert had to offer. The kids were always up for the adventures planned for us. We were always surrounded by nice people, good food and AMAZING scenery. Quite a family destination. From this experience makes us want to come back Mongolia, again and again and again. </em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Adam Singer family, USA</strong></span></p>
+        <span style="color:#000000"><strong>Adam Singer family, USA</strong></span></p>
     <p><img src="/images/Adam 1.jpg" alt="Adam"><img src="/images/adam 2.jpg" alt="Adam" style="margin-left: 10px;"></p>
 </blockquote>
 </div>
@@ -72,7 +90,7 @@
     <p>
         <em>I was looking for an escorted trip that would show me the highlights of Mongolia in an authentic way, and Travel All Mongolia hit the spot. They're the only 100% Mongolian owned and operated tour operator there, and no matter where I wanted to go, they were accommodating and helpful. They are true "aficionados" of the destination and have a great network of resources all over the country. Thank you Soyoloo, Travel All Mongolia, for a wonderful trip!</em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Rachel Haile, USA</strong></span></p>
+        <span style="color:#000000"><strong>Rachel Haile, USA</strong></span></p>
     <p><img src="/images/Rachel Haile.jpg" alt="Rachel Haile"></p>
 </blockquote>
 </div>
@@ -94,7 +112,7 @@
         Again thank you; everyone on the tour joins me to thank you and wish you all
         the best to you and yours.</em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Luisa Lu, Group from USA</strong></span></p>
+        <span style="color:#000000"><strong>Luisa Lu, Group from USA</strong></span></p>
 </blockquote>
 </div>
 <div class="frame_quote"><blockquote>
@@ -105,7 +123,7 @@
     <p>
         <em>    Overall, Travel All Mongolia did an excellent job providing top quality service that allowed me to thoroughly enjoy this beautiful country without having to worry about logistics. Our guide handled everything flawlessly! The drivers were awesome. I hope to come back in the near future and spend more time exploring. </em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Kerina Rowley, USA</strong></span></p>
+        <span style="color:#000000"><strong>Kerina Rowley, USA</strong></span></p>
     <p><img src="/images/Kerina 1.jpg" alt="Kerina" width="203px"><img src="/images/Kerina 2.jpg" alt="Kerina" style="margin-left: 10px;"></p>
 </blockquote>
 </div>
@@ -113,7 +131,7 @@
     <p>
         <em>When you think about Mongolia, the first thing that comes to your mind is Genghis Khan, the tales of his achievements and the strength of his warriors. And then the desert, the Gobi, the dunes. A strange landscape that makes us running with imagination in geography books. Mongolia is much more: it is a country of dust, sounds, never-ending silence, and endless landscapes, horizons that seem to grow without end and without obstacles. Mongolia is reflected in people&#39;s eyes: peaceful, calm, always helpful and kind, fair &hellip; almost noble in their attitudes. People who live in gers (a name which will not say anything to most of Italian people) but that indicates typical tents where the nomadic Mongols lived and still live. Without continuous light, no running water, no comfort, no division of rooms and even less without bathroom. A tent where every day at any time you find a thermos full of hot water or airag (fermented milk, with a slightly salty taste and alcohol), ready for guests. A small cluster, a small world open to anyone who passes. No matter whom he is, where he comes from, what language he speaks. Just stop on the road (dusty way, sometimes there is not even a path and the driver moves like following an invisible line in the middle of the landscape). Someone will arrive in the saddle of his horse or riding a motorcycle. Probably it will be a child (they are entrusted to their family&rsquo;s herds) and he will immediately try to figure out how to help. Because you do not stop in the desert, if you do not really need to. You constantly travel, ride, go. And when you leave Ulaanbaatar (or UB, as they call it) you&rsquo;ll see just that: a long and vast prairie, always changing. Rockets, desert, dunes, mountains and plains. One day you are in t-shirt with 35 &deg; C. The day after you are obliged to wear gloves and scarf! Heaven and earth meet and touch (average altitude above sea level is from 1000 meters at least, UB is 1330 meters) ... in some places you believe you can touch the clouds. So it is not surprising to find out that one of the main deities is Tenger, the god of the sky. During night the sky is so beautiful and wonderful: immense, starry, where you even look at the shades of blue in the Milky Way (yes, they are not colors you see only in books!)... A sky without interruption of artificial lights for miles, surrounded by a silence that you never imagined could exist. A place to visit because it is one of the few places remaining natural on earth, innocent ... where children still accept a gift collecting it with open hands. Where children do not know what is a deflated balloon. Just to see their eyes lighting in discovering it, it&#39;s worth flying up to Mongolia!</em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Manuela Bolchini</strong></span></p>
+        <span style="color:#000000"><strong>Manuela Bolchini</strong></span></p>
     <p><img src="/images/Manuela 1.jpg" alt="Manuela" width="203px"><img src="/images/Manuela 2.jpg" alt="Manuella" style="margin-left: 10px;"></p>
 </blockquote>
 </div>
@@ -127,7 +145,7 @@
     <p>
         <em>Mongolia is a beautiful country located in the Central Asian grasslands called the Steppes. It is a land-locked country, sandwiched between Russia and China. The wide open spaces and the friendliness of the people will leave you nostalgic for a land of extensive peacefulness and vastness, long after your visit. Mongolia is worth the visit, and Mongolian Journeys is your best bet at getting your money worth seeing this gorgeous land.</em></p>
     <p>
-        <strong><span style="color:#8b4513;">Jack Perera Elkridge, Maryland, USA</span></strong></p>
+        <strong><span style="color:#000000">Jack Perera Elkridge, Maryland, USA</span></strong></p>
     <p><img src="/images/Jack 2.jpg" alt="Jack" width="203px"><img src="/images/Jack 1.jpg" alt="Jack" style="margin-left: 10px;"></p>
 </blockquote>
 </div>
@@ -144,7 +162,7 @@
     <p>
         <em>Thanks again Soyoloo It was really a great experience and filled with a lifetime of memories.</em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Michealla from Australia</strong></span></p>
+        <span style="color:#000000"><strong>Michealla from Australia</strong></span></p>
 </blockquote>
 </div>
 <div class="frame_quote"><blockquote>
@@ -154,7 +172,7 @@
         <em>Just want to thank you for your wonderful hospitality and expert tour guiding during our trip to Mongolia. We loved visiting the Husai National Park and exploring the city of Ulanbatar. Our favorite part of the trip was seeing the beautiful countryside and encountering wild horses camels and eagles.<br />
             Thank you so much for showing us around and making sure our trip was a success. We also enjoyed our driver, Zoloo. Look forward to planning our next adventure with you.</em></p>
     <p>
-		<span style="color:#8b4513;"><strong>Best,<br />
+		<span style="color:#000000"><strong>Best,<br />
             Lisa Berkman<br />
             Tour group from USA September</strong></span></p>
 </blockquote>
@@ -165,7 +183,7 @@
     <p>
         <em>I had a very enjoyable and unforgettable holiday in Mongolia, as it truly was the holiday of a lifetime. Mongolia is a fantastic destination because the scenery is just beautiful and the people are so friendly. Soyoloo was our tour guide and he spoke very good English, he was always punctual, very helpful and generally took care of us. He had very good knowledge of Mongolia, so we were well informed well of the history of Mongolia, the summer festival Nadaam, the traditional gers in the countryside, and the city of Ulaanbaatar. Visiting the traditional gers with Soyoloo was especially fun because We got to do so many different activities like try archery, try some of the Mongolian food, ride a camel, have our names written in Mongolian and we even had Mongolian music played to us. I had learnt that Mongolia is such a fascinating and unique country, which is extremely picturesque, and we would absolutely love to visit the country again in the future. I would recommend anyone thinking of going to Mongolia through Travel All Mongolia, to absolutely go, and get in contact with Soyoloo, because you will be well looked after and you will never forget the holiday.</em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Kayleigh Jones from England</strong></span></p>
+        <span style="color:#000000"><strong>Kayleigh Jones from England</strong></span></p>
 </blockquote>
 </div>
 <div class="frame_quote"><blockquote>
@@ -173,7 +191,7 @@
         <em>I&#39;m Roberto Cattone, President Italian Association Latitudes. Last August I was lucky enough to accompagnarte Mongolia in a group of 40 cars, 2 trucks and 9 bikes. for this important journey we rely on the professionalism of Travel All Mongolia.<br />
             When we arrived at the border from Siberia to the Italian speaking guide helped us practice and then accompanied us throughout the tour. Hotel booked on time Ulan Baatar and also a dinner at a local restaurant which was not planned. Excellent trip thanks to Travel All Mongolia and Mr. Soyoloo that may help you for any problem in Mongolia.</em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Roberto Cattone from Italy</strong></span></p>
+        <span style="color:#000000"><strong>Roberto Cattone from Italy</strong></span></p>
 </blockquote>
 </div>
 <div class="frame_quote"><blockquote>
@@ -182,6 +200,6 @@
     <p>
         <em>Thank you for looking after us so well.</em></p>
     <p>
-        <span style="color:#8b4513;"><strong>Jane Ferguson Group from Australia</strong></span></p>
+        <span style="color:#000000"><strong>Jane Ferguson Group from Australia</strong></span></p>
 </blockquote>
 </div>
