--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -472,6 +472,64 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>11</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}">{{ app.content_tours.tourName('western-mongolia-eagle-hunting-family-and-gobi-desert') }}</a></p>
+                </td>
+                <td>
+                    <p>12<sup>th</sup> of June, 2017</p>
+                </td>
+                <td>
+                    <p>13<sup>th</sup> of June, 2017</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>12</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}">{{ app.content_tours.tourName('western-mongolia-eagle-hunting-family-and-gobi-desert') }}</a></p>
+                </td>
+                <td>
+                    <p>25<sup>th</sup> of June, 2017</p>
+                </td>
+                <td>
+                    <p>6<sup>th</sup> of July, 2017</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -972,6 +1030,35 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>17</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}">{{ app.content_tours.tourName('western-mongolia-eagle-hunting-family-and-gobi-desert') }}</a></p>
+                </td>
+                <td>
+                    <p>16<sup>th</sup> of July, 2017</p>
+                </td>
+                <td>
+                    <p>26<sup>th</sup> of July, 2017</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -1467,6 +1554,64 @@
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>17</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}">{{ app.content_tours.tourName('western-mongolia-eagle-hunting-family-and-gobi-desert') }}</a></p>
+                </td>
+                <td>
+                    <p>5<sup>th</sup> of August, 2017</p>
+                </td>
+                <td>
+                    <p>16<sup>th</sup> of August, 2017</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>18</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}">{{ app.content_tours.tourName('western-mongolia-eagle-hunting-family-and-gobi-desert') }}</a></p>
+                </td>
+                <td>
+                    <p>25<sup>th</sup> of August, 2017</p>
+                </td>
+                <td>
+                    <p>5<sup>th</sup> of September, 2017</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
