aylal bolgonii included heseg deer baigaa shared accommodation in ger camp gesniig enuugeer soliyo Private ger for every 2 people in Tourist camp

--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-rural-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-rural-naadam-festival.html.twig
@@ -339,7 +339,7 @@
                         <div class="entry">
                             <div class="list_check">
                                 <ul>
-                                    <li>Shared accommodation in ger camp</li>
+                                    <li>Private ger for every 2 people in Tourist camp</li>
                                     <li>All meals as listed in itinerary</li>
                                     <li>All entrance fees</li>
                                     <li>Sightseeing as per itinerary</li>
